- MorphologicalFilter: cleaned up interface
- LinearResampler: cleaned up interface
- LabeledPairFinder: estimated negative sigma values are now treated as positive values
- FeatureFinder: added new algorithm 'MRM' for MRM feature detection; replaces FeatureFinderMRM
- ExperimentalSettings: remove native ID type (for mzML support)
- SourceFile: added native ID type (for mzML support)

Bug fixes:
- [2645436]: TOPPView - Data Filter for "Size" not available
- [2645510]: OpenMS - libOpenMS.so is built but linking fails (TOPP, tests) (on Debian "Lenny")
- [2665055]: FileFilter ignores -sort option for FeatureXML and Consensus
- [2659013]: windows contrib can fail when copying compiled libraries
- [2606068]: TOPP tools with list parameters do not work with INI files

------------------------------------------------------------------------------------------
----                                   OpenMS 1.3                                     ----
------------------------------------------------------------------------------------------

New features and improvements of OpenMS:
- The build system is now based on CMake - supporting Linux, MacOS and Windows.
- Finalized mzML implementation (version 1.1.0 RC4)
  - previously unsupported parts
  - indexed mzML
  - semantic validation (see FileInfo)
- Kernel: Replaced comparators NthPositionLess by the comparator(s) RTLess and/or MZLess.
- Kernel: Replaced methods sortByNthPosition() by the method(s) sortByRT() and/or sortByMZ().
- Improved the framework for meta data visualization.
- Several extensions to the meta data classes were made for mzML compliance.
- The macros used for unit testing in source/TEST have been revised.
- More consistent handling of single vs. double numeric precision, esp. in file output.
- Added ANALYSIS/PIP/PeakIntensityPredictor class for peak intensity prediction (contributed by Alexandra Scherbart).
- Added support for Intel Compiler versions 10 and 11
- Added support for Qt up to 4.5 rc1
