@@ -3,6 +3,7 @@ set(directory include/OpenMS/VISUAL/DIALOGS/UIC)
 
 ### list all filenames of the directory here
 set(sources_list
+DemoDialog.ui
 DataFilterDialog.ui
 FeatureEditDialog.ui
 LayerStatisticsDialog.ui
